# Copyright (c) 2022 Huawei Device Co., Ltd.
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in
#    the documentation and/or other materials provided with the
#    distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR(S) ``AS IS'' AND ANY EXPRESS
# OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR(S) BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
# GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
# IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
# IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//build/ohos.gni")
config("vfat-defaults") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-D_FILE_OFFSET_BITS=64",
    "-D_GNU_SOURCE",
    "-DSIGINFO=SIGUSR2",
    "-Dnitems(x)=(sizeof((x))/sizeof((x)[0]))",
    "-Wno-implicit-function-declaration",
    "-D_MACHINE_IOCTL_FD_H_",
  ]
  include_dirs = [ "../../sys" ]
}

###################################################
##Build newfs_msdos
ohos_executable("newfs_msdos") {
  configs = [ ":vfat-defaults" ]
  sources = [
    "mkfs_msdos.c",
    "newfs_msdos.c",
  ]

  include_dirs = []
  install_enable = true
  deps = []
  subsystem_name = "thirdparty"
  part_name = "FreeBSD"
  install_images = [ "system" ]
}
